force-app/main/default/objects/BrewConfig__mdt/BrewConfig__mdt.object-meta.xml
<CustomObject>
    <label>Brew Config</label>
    <pluralLabel>Brew Configs</pluralLabel>
</CustomObject>