force-app/main/default/objects/BrewConfig__mdt/fields/DefaultCadence__c.field-meta.xml
<CustomField>
    <fullName>DefaultCadence__c</fullName>
    <label>Default Subscription Cadence</label>
    <type>Text</type>
    <length>16</length>
</CustomField>