force-app/main/default/objects/BrewConfig__mdt/fields/EnableLoyalty__c.field-meta.xml
<CustomField>
    <fullName>EnableLoyalty__c</fullName>
    <label>Enable Loyalty Program</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>