force-app/main/default/objects/BrewConfig__mdt/fields/FreeShippingThreshold__c.field-meta.xml
<CustomField>
    <fullName>FreeShippingThreshold__c</fullName>
    <label>Free Shipping Threshold</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>2</scale>
</CustomField>