force-app/main/default/objects/BrewConfig__mdt/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Text</type>
    <length>16</length>
    <required>true</required>
</CustomField>